# sdl-breakout

./: CMakeLists.txt  README.md
src/: constants.h  controller.c  controller.h  main.c  render_state.c  render_state.h  state.h  timer.c  timer.h  update.c  update.h
src/breakout/: breakout_render.c  breakout_render.h  breakout_update.c  breakout_update.h
src/state/: ball.h  brick.h  config.h  paddle.h  sound.h  state.h
